# skill-advisor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  README.zh.md  RELEASE_v6.0.0.md  ROADMAP.md  SKILL.md  _do_restore.py  _merge_restore_part1.py  pyproject.toml  scenarios.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  data_sync.yml  sync_skills.yml  sync_skills_v2.yml  workflow.yml
data/: .sync_state  anthropic_skills.json  backfill_state.json  corrupt_test.db  github_topics_code.txt  github_topics_extended.txt  skill-advisor.db  skills.db
scripts/: advisor.py  advisor_v2.py  advisor_v2_hook.py  agent_registry.py  backfill_descriptions.py  backfill_github.py  backfill_network.py  browser_trigger.py  build_cache.py  build_vector_index.py  build_vectors.py  eval_search.py  eval_search_v2.py  eval_vector.py  fetch_real_descriptions.py  gen_changelog.py  incremental_update.py  install_confirm.py  merge_skillfinder.py  merge_with_backfill.py  profession_packs.py  search_chinese.py  search_weighted.py  security_scan.py  semantic_search.py  setup.sh  skill_advisor_cli.py
skill_advisor/: __init__.py  cli.py  i18n.py  recommender.py  search.py  vector_search.py
skill_advisor/i18n/: en.json  ja.json  ko.json  zh.json
tests/: eval_queries.json  eval_results.json  eval_vector_results.json  test_search.py  test_search_enhanced.py
web/: app.py
web/templates/: index.html  pack_detail.html  packs.html  search.html
